5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1575_1327.log
== TEST (2019-03-12 11:28:19) 
-- CODE:
printf("45");
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf("45");
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:28:28) 
-- CODE:
print("45");
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:28:45) 
-- CODE:
print("35");
-- EXECUTION TIME:
0.13691
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
